--- a/package.json
+++ b/package.json
@@ -5,23 +5,26 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon",
-    "build" : "tsc",
+    "build": "tsc",
     "start": "node build/server.js"
-
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "jsdoc": "^4.0.2",
     "nodemon": "^3.0.2",
+    "prisma": "^5.6.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.3.2"
   },
   "dependencies": {
+    "@prisma/client": "^5.6.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "zod": "^3.22.4"
   }
 }
