--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "scripts": {
     "dev": "nodemon",
     "build": "tsc",
-    "start": "node build/server.js"
+    "start": "node build/server.js",
+    "migrate:dev": "prisma migrate dev",
+    "migrate:deploy": "prisma migrate deploy"
   },
-  "author": "",
   "license": "ISC",
   "devDependencies": {
     "@prisma/client": "^5.7.0",
